--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <div id="up">
+            <div class="score">
+                <p id="yourScore"></p>
+                <div class="humanScore"></div>
+            </div>
+            <div class="score">
+                <p id="computerScore"></p>
+                <div class="computerScore"></div>
+            </div>
+        </div>
+        <div class="middle">
+            <h3 class="on" id="result"></h3>
+            <button class="on" id="playAgain">Play Again</button>
+            <button id="button">Play Game</button>
+            <div class="onPlay computerChoice"></div>
+            <p class="onPlay">VS</p>
+            <div class="onPlay yourChoice"></div>
+        </div>
+        <div id="down">
+            <img class="rock" src="images/rock.png">
+            <img class="paper" src="images/paper.png">
+            <img class="scissors" src="images/scissors.png">
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
